Fixed a layout bug that caused the Parameters: table field to wrap if a long content in the description was present.

--- a/doc/source/_static/default.css
+++ b/doc/source/_static/default.css
@@ -542,6 +542,7 @@ table.field-list {
 
 .field-list th {
     background-color: #f2f2f2;
+    white-space: nowrap;
 }
 
 .field-list td {
